--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -4,56 +4,154 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<style>
+    .btn-edit {
+        width: 18%;
+        margin-top: 14px;
+        margin-bottom: 22px !important;
+        background-color: #AB7442;
+        color: #fff;
+    }
 
-<h4>Product</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ProductId" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProductDescription" class="control-label"></label>
-                <input asp-for="ProductDescription" class="form-control" />
-                <span asp-validation-for="ProductDescription" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
-                <span asp-validation-for="Category" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Availability" class="control-label"></label>
-                <input asp-for="Availability" class="form-control" />
-                <span asp-validation-for="Availability" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ImageUrlpath" class="control-label"></label>
-                <input asp-for="ImageUrlpath" class="form-control" />
-                <span asp-validation-for="ImageUrlpath" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    body {
+        background-color: #f5f5f5; /* Light gray background color */
+        margin: 0;
+        padding: 0;
+    }
+
+    .edit-product {
+        width: 50%;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    h1 {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    label {
+        font-weight: bold;
+    }
+
+    input[type="text"],
+    input[type="number"],
+    input[type="url"],
+    input[type="submit"] {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    input[type="submit"] {
+        background-color: #AB7442;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 18%;
+    }
+
+        input[type="submit"]:hover {
+            background-color: #F5DEB3;
+            border-color: #555 !important;
+        }
+
+    /* Validation error message styles */
+    .edit-form .text-danger {
+        color: #dc3545;
+        font-size: 12px;
+    }
+
+</style>
+
+<div class="edit-product">
+    <h1>Edit</h1>
+
+    <h4>Product</h4>
+    <hr />
+
+    <form asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="ProductId" />
+        <div class="form-group">
+            <label asp-for="Name" class="control-label"></label>
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ProductDescription" class="control-label"></label>
+            <input asp-for="ProductDescription" class="form-control" />
+            <span asp-validation-for="ProductDescription" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Price" class="control-label"></label>
+            <input asp-for="Price" class="form-control" data-val="true" data-val-number="The field Price must be a number." data-val-range="The field Price must be between 0 and 999999.99." data-val-range-max="999999.99" data-val-range-min="0" data-val-regex="The field Price must be in the format xx.xx." data-val-regex-pattern="^\d+(\.\d{1,2})?$" />
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Category" class="control-label"></label>
+            <select asp-for="Category" class="form-control">
+                <option value="wood-work">Wood Work</option>
+                <option value="beaded-work">Beaded Work</option>
+                <option value="leather-goods">Leather Goods</option>
+                <option value="metal-work">Metal Work</option>
+                <option value="textiles">Textiles</option>
+                <option value="ceramics">Ceramics</option>
+            </select>
+            <span asp-validation-for="Category" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Availability" class="control-label"></label>
+            <select asp-for="Availability" class="form-control">
+                <option value="True">True</option>
+                <option value="False">False</option>
+            </select>
+            <span asp-validation-for="Availability" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ImageUrlpath" class="control-label"></label>
+            <input asp-for="ImageUrlpath" class="form-control" />
+            <span asp-validation-for="ImageUrlpath" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Save" class="btn btn-primary btn-edit" />
+        </div>
+    </form>
+
+    <div>
+        <i class="fa fa-reply" aria-hidden="true"></i><a asp-action="Index">Back to List</a>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script>
+        $.validator.addMethod("regex", function (value, element, pattern) {
+            if (pattern instanceof Array) {
+                for (var i = 0; i < pattern.length; i++) {
+                    if (!regexArray[i].test(value)) return false;
+                }
+                return true;
+            } else {
+                return pattern.test(value);
+            }
+        }, "Invalid format.");
+
+        $.validator.unobtrusive.adapters.add("regex", function (options) {
+            options.rules["regex"] = options.params;
+            if (options.message) {
+                options.messages["regex"] = options.message;
+            }
+        });
+    </script>
 }
